Test with JDK 23-ea